--- a/index.html
+++ b/index.html
@@ -114,27 +114,27 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-lg-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box shadow-sm"><img src="images/companies/company-1.png" alt="Company 1 logo"
               title="Company 1 Logo" class="img-fluid"></div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box shadow-sm"><img src="images/companies/company-2.png" alt="Company 2 logo"
               title="Company 2 Logo" class="img-fluid"></div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box shadow-sm"><img src="images/companies/company-3.png" alt="Company 3 logo"
               title="Company 3 Logo" class="img-fluid"></div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box shadow-sm"><img src="images/companies/company-4.png" alt="Company 4 logo"
               title="Company 4 Logo" class="img-fluid"></div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box shadow-sm"><img src="images/companies/company-5.png" alt="Company 5 logo"
               title="Company 5 Logo" class="img-fluid"></div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box shadow-sm"><img src="images/companies/company-6.png" alt="Company 6 logo"
               title="Company 6 Logo" class="img-fluid"></div>
         </div>
@@ -761,7 +761,7 @@
 
   <footer class="footer">
     <div class="container">
-      <div class="row">
+      <div class="row contact-box-wrapper">
 
         <!-- CONTENT FOR THE MOBILE NUMBER -->
 
@@ -907,6 +907,9 @@
     <i class="fas fa-chevron-up"></i>
   </a>
 
+  <script src="/assets/js/bootstrap.bundle.js"></script>
+  <script src="/assets/js/custom.js"></script>
+
   <script src="/assets/vendors/js/glightbox.min.js"></script>
 
   <!-- LIGHTBOX -->
@@ -917,16 +920,13 @@
     })
 
     const lightbox = GLightbox({
-      'href': 'https://youtu.be/J9lS14nM1xg',
+      'href': 'https://youtu.be/53tBZwCyx88',
       'type': 'video',
       'source': 'youtube',
       'width': 900,
       'autoPlayVideos': 'true',
     });
   </script>
-
-  <script src="/assets/js/bootstrap.bundle.js"></script>
-  <script src="/assets/js/custom.js"></script>
 
 </body>
 
