testing bug fix v3

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
     <i class="fas fa-chevron-up"></i>
   </a>
 
-  <script src="/assets/js/bootstrap.bundle.js"></script>
+  <script src="/assets/js/bootstrap.bundle.min.js"></script>
   <script src="/assets/js/custom.js"></script>
 
   <script src="/assets/vendors/js/glightbox.min.js"></script>
