fixed mobile navbar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mb-sm-4 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
@@ -48,7 +48,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
-        <button type="button" class="rounded-pill btn-rounded">+1 (332) 98104-2205 <span><i
+        <button type="button" class="rounded-pill btn-rounded">+1 (332) 9810-220 <span><i
               class="fas fa-phone-alt"></i></span></button>
       </div>
     </div>
