--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
 
     <div class="container mt-5 company-info">
       <div class="row text-white justify-content-center mt-3 pb-3">
-        <div class="col-12 col-sm-6 col-lg-6">
+        <div class="col-12 col-sm-6 col-lg-6 mb-4 mb-sm-4 mb-md-0">
           <h5 class="text-capitalize fw-bold">Unicorn Agency</h5>
           <hr class="bg-white d-inline-block mb-4">
           <p class="lh-lg pe-md-5">
