updated template typography

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:image" content="https://mugshotbot.com/m/dVvCf0eE">
+  <meta property="twitter:card" content="summary_large_image">
   <link rel="shortcut icon" type="image/png" href="images/unicorn-favicon.png" />
   <title>Unicorn Agency</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <link rel="stylesheet" href="assets/vendors/css/glightbox.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900;1000&display=swap"
     rel="stylesheet">
 </head>
 
@@ -843,7 +845,7 @@
 
     <!-- START THE CONTENT FOR COMPANY INFO -->
 
-    <div class="container mt-5 company-info">
+    <div class="container mt-5 company-info px-3">
       <div class="row text-white justify-content-center mt-3 pb-3">
         <div class="col-12 col-sm-6 col-lg-6 mb-4 mb-sm-4 mb-md-0">
           <h5 class="text-capitalize fw-bold">Unicorn Agency</h5>
@@ -893,7 +895,8 @@
         <div class="row text-center text-white">
           <div class="col-12">
             <div class="footer-bottom__copyright">
-              &copy; Copyright 2022 <a href="#">Unicorn Agency</a>
+              &copy; Copyright 2022 <a href="#">Unicorn Agency</a> <br />
+              A project by <a href="https://www.sammyleths.com" target="_blank">SammyLeths</a>
             </div>
           </div>
         </div>
