Updated template typography and font

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="assets/vendors/css/glightbox.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900;1000&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -433,7 +435,7 @@
       <div class="row text-center">
         <h1 class="display-3 fw-bold text-uppercase">Faq</h1>
         <div class="heading-line"></div>
-        <p class="lead">frequently asked questions, get knowledge before hand</p>
+        <p class="lead">Frequently asked questions, get knowledge before hand</p>
       </div>
 
       <!-- ACCORDION CONTENT -->
@@ -865,7 +867,7 @@
             <li><a href="#">lorem ipsum</a></li>
           </ul>
         </div>
-        <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+        <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto pt-md-4 pt-lg-0">
           <h5 class="text-capitalize fw-bold">Useful Links</h5>
           <hr class="bg-white d-inline-block mb-4">
           <ul class="list-inline company-list">
@@ -875,7 +877,7 @@
             <li><a href="#">Help</a></li>
           </ul>
         </div>
-        <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+        <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto pt-md-4 pt-lg-0">
           <h5 class="text-capitalize fw-bold">Contact</h5>
           <hr class="bg-white d-inline-block mb-4">
           <ul class="list-inline company-list">
