Updated border boxes

--- a/index.html
+++ b/index.html
@@ -712,8 +712,8 @@
 
       <!-- START THE CTA CONTENT -->
 
-      <div class="row text-white">
-        <div class="col-12 col-lg-6 gradient shadow p-3">
+      <div class="row text-white get-started__box">
+        <div class="col-12 col-lg-6 get-started__box--left gradient shadow p-3">
           <div class="cta-info w-100">
             <h4 class="display-4 fw-bold">100% Satisfaction Guaranteed</h4>
             <p class="lh-lg">
@@ -728,7 +728,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-12 col-lg-6 bg-white shadow p-3">
+        <div class="col-12 col-lg-6 bg-white get-started__box--right shadow p-3">
           <div class="form w-100">
             <h4 class="display-3--title mb-4">Start your project</h4>
             <form action="#" class="row">
