--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://mugshotbot.com/m/dVvCf0eE">
   <meta property="twitter:card" content="summary_large_image">
   <link rel="shortcut icon" type="image/png" href="images/unicorn-favicon.png" />
-  <title>Unicorn Agency</title>
+  <title>Agency</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <link rel="stylesheet" href="assets/vendors/css/glightbox.min.css">
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark menu fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.png" alt="logo image" class="navbar-brand-img">
+        <img src="images/kLogo.png" alt="logo image" class="navbar-brand-img">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,15 +68,15 @@
 
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Hi!, Welcome to Unicorn Agency</span>
+            <span class="display-2--intro">Diseño web y Marketing digital para tu negocio</span>
             <span class="display-2--description lh-base">
-              We're a multiple award winning digital agency with expertise in a diverse range of digital services and
-              solutions
+              Somos tu puerta de entrada al éxito en el mundo digital. Con una sólida experiencia en webs y marketing digital, estamos aquí para llevar tu presencia en línea al siguiente nivel... ¿Listo para el cambio?
+
             </span>
           </h1>
           <a href="#contact">
             <button type="button" class="rounded-pill btn-rounded">
-              Get in Touch<span><i class="fas fa-arrow-right"></i></span>
+             Más información<span><i class="fas fa-arrow-right"></i></span>
             </button>
           </a>
         </div>
@@ -180,28 +180,30 @@
 
     <div class="container px-5">
 
-      <!-- START THE MARKETING CONTENT -->
+
+      <!-- START WEB DESIGN CONTENT -->
+
       <div class="row px-0 px-lg-5">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
-          <div class="services__content order-sm-0">
-            <div class="icon d-block fas fa-paper-plane"></div>
-            <h3 class="display-3--title mt-1">Marketing</h3>
+          <div class="services__content">
+            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <h3 class="display-3--title mt-1">Diseño web</h3>
             <p class="lh-lg">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti culpa sit pariatur cupiditate possimus
-              nulla cum magnam ullam fuga nobis? Vel neque unde maxime cupiditate laborum ducimus dolorum.
+              Damos vida a tu visión online con nuestro diseño web innovador y personalizado.
             </p>
             <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Learn more<span><i
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
                     class="fas fa-arrow-right"></i></span></button>
             </a>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto text-end">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
           <div class="services__pic">
-            <img src="images/services/service-1.png" alt="marketing illustration" class="img-fluid">
+            <img src="images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
           </div>
         </div>
       </div>
+
 
       <!-- START THE WEB DEVELOPMENT CONTENT -->
 
@@ -214,44 +216,72 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
           <div class="services__content">
             <div class="icon d-block fas fa-code"></div>
-            <h3 class="display-3--title mt-1">web development</h3>
+            <h3 class="display-3--title mt-1">Branding </h3>
             <p class="lh-lg">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti culpa sit pariatur cupiditate possimus
-              nulla cum magnam ullam fuga nobis? Vel neque unde maxime cupiditate laborum ducimus dolorum.
+              Destaca tu marca con estrategias de branding que la diferencian y atraen.
             </p>
             <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Learn more<span><i
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
                     class="fas fa-arrow-right"></i></span></button>
             </a>
           </div>
         </div>
       </div>
 
-      <!-- START THE CLOUD HOSTING CONTENT -->
 
+      
+      <!-- START THE MARKETING CONTENT -->
       <div class="row px-0 px-lg-5">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
-          <div class="services__content">
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
-            <h3 class="display-3--title mt-1">cloud hosting</h3>
+          <div class="services__content order-sm-0">
+            <div class="icon d-block fas fa-paper-plane"></div>
+            <h3 class="display-3--title mt-1">Estrategia Digital</h3>
             <p class="lh-lg">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti culpa sit pariatur cupiditate possimus
-              nulla cum magnam ullam fuga nobis? Vel neque unde maxime cupiditate laborum ducimus dolorum.
+              Potenciamos tu marca en el mundo digital con estrategias adaptadas a tus necesidades.
             </p>
             <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Learn more<span><i
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
                     class="fas fa-arrow-right"></i></span></button>
             </a>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto text-end">
           <div class="services__pic">
-            <img src="images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+            <img src="images/services/service-1.png" alt="marketing illustration" class="img-fluid">
           </div>
         </div>
       </div>
+
+      
+
+        <!-- START THE WEB DEVELOPMENT CONTENT -->
+
+        <div class="row px-0 px-lg-5">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto text-start">
+            <div class="services__pic">
+              <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
+            <div class="services__content">
+              <div class="icon d-block fas fa-code"></div>
+              <h3 class="display-3--title mt-1">Marketing Digital </h3>
+              <p class="lh-lg">
+                Impulsamos tu marca hacia el éxito en el mundo digital que generan impacto y resultados comprobados.
+                            </p>
+              <a href="#contact">
+                <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                      class="fas fa-arrow-right"></i></span></button>
+              </a>
+            </div>
+          </div>
+        </div>
+
+
     </div>
   </section>
+
+  
 
   <!-- START SECTION 5 - THE TESTIMONIALS -->
 
@@ -265,7 +295,7 @@
       <div class="row text-center text-white mb-5">
         <h1 class="display-3 fw-bold">Testimonials</h1>
         <hr class="mx-auto">
-        <p class="lead pt-1">what our clients are saying</p>
+        <p class="lead pt-1">Desde que empezamos hemos prestado un servicio de confianza a nuestros clientes. Hemos tenido el honor de ser la empresa elegida por las siguientes sociedades:</p>
       </div>
 
       <!-- START THE CAROUSEL CONTENT -->
@@ -703,10 +733,10 @@
   <section id="contact" class="get-started">
     <div class="container">
       <div class="row text-center">
-        <h1 class="display-3 fw-bold text-capitalize">Get started</h1>
+        <h1 class="display-3 fw-bold text-capitalize">¿Quieres que hablemos?</h1>
         <div class="heading-line"></div>
         <p class="lh-lg pb-3 pb-md-5">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit velit unde sed.
+          Si te ha gustado lo que has visto y te gustaría proponernos que formemos parte de tu proyecto estaremos encantados de ecucharte. Rellena el formulario y te responderemo loantes posible.
         </p>
       </div>
 
@@ -799,7 +829,7 @@
             </svg>
           </div>
           <div class="contact-box__info">
-            <a href="" class="contact-box__info--title">info@unicornagency.com</a>
+            <a href="" class="contact-box__info--title">info@kweb.com</a>
             <p class="contact-box__info--subtitle">Online Support</p>
           </div>
         </div>
@@ -819,7 +849,7 @@
             </svg>
           </div>
           <div class="contact-box__info">
-            <a href="" class="contact-box__info--title">New York, USA</a>
+            <a href="" class="contact-box__info--title">Madrid, España</a>
             <p class="contact-box__info--subtitle">NY 10012, US</p>
           </div>
         </div>
@@ -897,7 +927,7 @@
         <div class="row text-center text-white">
           <div class="col-12">
             <div class="footer-bottom__copyright">
-              &copy; Copyright 2022 <a href="#">Unicorn Agency</a> <br />
+              &copy; Copyright 2024 <a href="#">Agency Creative</a> <br />
               A project by <a href="https://www.sammyleths.com" target="_blank">SammyLeths</a>
             </div>
           </div>
