--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark menu fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="images/kLogo.png" alt="logo image" class="navbar-brand-img">
+      <a class="navbar-brand" href="#">LOGO
+        <!-- <img src="images/kLogo.png" alt="logo image" class="navbar-brand-img"> -->
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,10 +34,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav mb-sm-4 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link" href="#services">Servicios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#testimonials">Testimonials</a>
@@ -45,14 +45,14 @@
           <li class="nav-item">
             <a class="nav-link" href="#faq">Faqs</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#portfolio">Portfolio</a>
-          </li>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="#contact">Contacto</a>
           </li>
         </ul>
-        <button type="button" class="rounded-pill btn-rounded">+1 (332) 9810-220 <span><i
+        <button type="button" class="rounded-pill btn-rounded">Tengo un proyecto <span><i
               class="fas fa-phone-alt"></i></span></button>
       </div>
     </div>
@@ -70,7 +70,9 @@
           <h1 class="display-2">
             <span class="display-2--intro">Diseño web y Marketing digital para tu negocio</span>
             <span class="display-2--description lh-base">
-              Somos tu puerta de entrada al éxito en el mundo digital. Con una sólida experiencia en webs y marketing digital, estamos aquí para llevar tu presencia en línea al siguiente nivel... ¿Listo para el cambio?
+              Somos tu puerta de entrada al éxito en el mundo digital. Con una sólida experiencia en webs y marketing digital, 
+              estamos aquí para llevar tu presencia en línea al siguiente nivel... 
+              ¿Listo para el cambio?
 
             </span>
           </h1>
@@ -97,26 +99,26 @@
         </div>
       </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#ffffff" fill-opacity="1"
         d="M0,96L48,80C96,64,192,32,288,48C384,64,480,128,576,133.3C672,139,768,85,864,80C960,75,1056,117,1152,128C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
       </path>
-    </svg>
+    </svg> -->
   </section>
 
   <!-- START THE FEATURED IN SECTION -->
 
-  <section id="featured-in" class="featured-in">
+  <!-- <section id="featured-in" class="featured-in">
     <div class="container">
       <div class="row text-center">
         <h4 class="fw-bold lead mb-3">Trusted by companies like</h4>
         <div class="heading-line mb-5"></div>
       </div>
-    </div>
+    </div> -->
 
     <!-- START THE FEATURED IN COMPANIES LIST -->
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box shadow-sm"><img src="images/companies/company-1.png" alt="Company 1 logo"
@@ -144,14 +146,14 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- START SECTION 4 - THE SERVICES -->
 
   <section id="services" class="services">
     <div class="container mb-5">
       <div class="row text-center">
-        <h1 class="display-3 fw-bold">Our Services</h1>
+        <h1 class="display-3 fw-bold">Servicios</h1>
         <div class="heading-line mb-1"></div>
       </div>
 
@@ -161,16 +163,20 @@
         <div class="col-md-6 border-right">
           <div class="bg-white p-4">
             <h2 class="fw-bold text-capitalize text-center">
-              Our Services Range From Initial Design To Deployment Anywhere Anytime
+              No quieres una agencia de desarrollo web,
+              quieres vender más
             </h2>
           </div>
         </div>
         <div class="col-md-6">
           <div class="bg-white p-4 text-start">
             <p class="fw-light lead">
-              Lorem ipsum dolor sit amet consectetur architecto magni, dicta maxime laborum temporibus dolorem esse
-              doloremque illo quas nisi enim molestias. Tempore ducimus molestiae in dolore enim.
+              Como agencia digital 360, simplificamos la innovación y transformación digital, fundamentales en el entorno empresarial actual. Ofrecemos una amplia gama de servicios, desde branding digital y diseño web hasta marketing digital y estrategias de inbound marketing.
+
             </p>
+            <p class="fw-light lead">
+            Adaptamos nuestros servicios a las necesidades específicas de cada cliente, asegurando un enfoque personalizado para potenciar su marca.
+          </p>
           </div>
         </div>
       </div>
@@ -286,11 +292,11 @@
   <!-- START SECTION 5 - THE TESTIMONIALS -->
 
   <section id="testimonials" class="testimonials">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#ffffff" fill-opacity="1"
         d="M0,192L48,176C96,160,192,128,288,144C384,160,480,224,576,224C672,224,768,160,864,160C960,160,1056,224,1152,245.3C1248,267,1344,245,1392,234.7L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
       </path>
-    </svg>
+    </svg> -->
     <div class="container pt-5">
       <div class="row text-center text-white mb-5">
         <h1 class="display-3 fw-bold">Testimonials</h1>
@@ -451,11 +457,11 @@
         </div>
       </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#ffffff" fill-opacity="1"
         d="M0,192L48,176C96,160,192,128,288,144C384,160,480,224,576,224C672,224,768,160,864,160C960,160,1056,224,1152,245.3C1248,267,1344,245,1392,234.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
       </path>
-    </svg>
+    </svg> -->
   </section>
 
   <!-- START SECTION 6 - THE FREQUENTLY ASKED QUESTIONS -->
@@ -480,17 +486,14 @@
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                   aria-expanded="true" aria-controls="collapseOne">
-                  What are the main features?
+                  Agencia digital 360
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quod iste facilis, quia a odio et
-                  rerum cumque nam soluta eaque accusantium quasi voluptas consequatur perferendis. Qui reiciendis non
-                  repellat architecto perspiciatis suscipit itaque ullam consequatur saepe quidem maiores quos quo,
-                  corporis ad eaque placeat sequi? Dolores architecto, dolor porro quasi accusamus sunt et facilis
-                  impedit repudiandae pariatur omnis! Earum.
+                  Somos una agencia digital con departamentos integrados de estrategia y marketing digital, diseño de experiencia de usuario y desarrollo web / móvil en la misma agencia. No somos sólo un estudio de diseño gráfico, una agencia de publicidad o una agencia de marketing online, sino que cubrimos todo el espectro de servicios digitales.
+
                 </div>
               </div>
             </div>
@@ -566,28 +569,28 @@
   <!-- START SECTION 7 - THE PORTFOLIO -->
 
   <section id="portfolio" class="portfolio">
-    <div class="container">
+    <!-- <div class="container">
       <div class="row text-center mt-5">
         <h1 class="display-3 fw-bold text-capitalize">Latest work</h1>
         <div class="heading-line"></div>
         <p class="lead">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi saepe deleniti.
         </p>
-      </div>
+      </div> -->
 
       <!-- FILTER BUTTONS -->
 
-      <div class="row mt-5 mb-4 g-3 text-center">
+      <!-- <div class="row mt-5 mb-4 g-3 text-center">
         <div class="col-md-12">
           <button class="btn btn-outline-primary filter-btn active" type="button" id="all">All</button>
           <button class="btn btn-outline-primary filter-btn" type="button" id="website">Website</button>
           <button class="btn btn-outline-primary filter-btn" type="button" id="design">Design</button>
           <button class="btn btn-outline-primary filter-btn" type="button" id="mockup">Mockup</button>
         </div>
-      </div>
+      </div> -->
 
       <!-- START THE PORTFOLIO ITEMS -->
-
+<!-- 
       <div class="row">
         <div class="col-lg-4 col-md-6 portfolio-card" data-tags="all, website">
           <div class="portfolio-box shadow">
@@ -725,7 +728,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
 
   <!-- START SECTION 8 - GET STARTED -->
@@ -733,7 +736,7 @@
   <section id="contact" class="get-started">
     <div class="container">
       <div class="row text-center">
-        <h1 class="display-3 fw-bold text-capitalize">¿Quieres que hablemos?</h1>
+        <h1 class="display-3 fw-bold text-capitalize">¿Hablamos?</h1>
         <div class="heading-line"></div>
         <p class="lh-lg pb-3 pb-md-5">
           Si te ha gustado lo que has visto y te gustaría proponernos que formemos parte de tu proyecto estaremos encantados de ecucharte. Rellena el formulario y te responderemo loantes posible.
@@ -745,42 +748,42 @@
       <div class="row text-white get-started__box">
         <div class="col-12 col-lg-6 get-started__box--left gradient shadow p-3">
           <div class="cta-info w-100">
-            <h4 class="display-4 fw-bold">100% Satisfaction Guaranteed</h4>
+            <h4 class="display-4 fw-bold">Satisfacción Garantizada al 100%</h4>
             <p class="lh-lg">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum, perspiciatis. Eaque nobis eos, soluta
               esse voluptate et nihil libero aut voluptates!
             </p>
-            <h3 class="display-3--brief">What will be the next step?</h3>
+            <h3 class="display-3--brief">¿Cuál será el siguiente paso?</h3>
             <ul class="cta-info__list">
-              <li>We'll prepare the proposal</li>
-              <li>We'll discuss it together</li>
-              <li>Let's start the discussion</li>
+              <li>Prepararemos la propuesta</li>
+              <li>La discutiremos juntos</li>
+              <li>Comencemos la conversación</li>
             </ul>
           </div>
         </div>
         <div class="col-12 col-lg-6 bg-white get-started__box--right shadow p-3">
           <div class="form w-100">
-            <h4 class="display-3--title mb-4">Start your project</h4>
+            <h4 class="display-3--title mb-4">Inicia tu Proyecto</h4>
             <form action="#" class="row">
               <div class="col-lg-6 col-md-6 mb-3">
-                <input type="text" placeholder="First Name" id="inputFirstName"
+                <input type="text" placeholder="Nombre" id="inputFirstName"
                   class="shadow form-control-lg form-control">
               </div>
               <div class="col-lg-6 col-md-6 mb-3">
-                <input type="text" placeholder="Last Name" id="inputLastName"
+                <input type="text" placeholder="Apellido" id="inputLastName"
                   class="shadow form-control-lg form-control">
               </div>
               <div class="col-lg-12 mb-3">
-                <input type="email" placeholder="Email Address" id="inputEmail"
+                <input type="email" placeholder="Correo Electrónico" id="inputEmail"
                   class="shadow form-control-lg form-control">
               </div>
               <div class="col-lg-12 mb-3">
-                <textarea name="message" placeholder="Message" id="message" rows="8"
+                <textarea name="message" placeholder="Mensaje" id="message" rows="8"
                   class="shadow form-control-lg form-control"></textarea>
               </div>
               <div class="text-center d-grid mt-1">
                 <button type="button" class="btn btn-primary rounded-pill pt-3 pb-3">
-                  Submit
+                  Enviar
                   <i class="fas fa-paper-plane"></i>
                 </button>
               </div>
@@ -788,8 +791,8 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
+      </div>
+      </section>
 
   <!-- START SECTION 9 - THE FOOTER  -->
 
@@ -810,7 +813,7 @@
               <path d="M15 3a6 6 0 0 1 6 6" />
             </svg></div>
           <div class="contact-box__info">
-            <a href="" class="contact-box__info--title">+1 (332) 98104-2205</a>
+            <a href="" class="contact-box__info--title">xxx xx xx xx</a>
             <p class="contact-box__info--subtitle">Mon-Fri 9am-6pm</p>
           </div>
         </div>
@@ -861,15 +864,19 @@
     <div class="footer-sm">
       <div class="container">
         <div class="row py-4 text-center text-white">
-          <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
-            connect with us on social media
-          </div>
           <div class="col-lg-7 col-md-6">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <div class="footer-bottom__copyright">
+              &copy; Copyright 2024 <a href="#">Agency Creative</a> 
+            </div>
+          </div>
+          <div class="col-lg-5 col-md-6">
+            <div class="footer-bottom__logos">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-github"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
           </div>
         </div>
       </div>
@@ -877,7 +884,7 @@
 
     <!-- START THE CONTENT FOR COMPANY INFO -->
 
-    <div class="container mt-5 company-info px-3">
+    <!-- <div class="container mt-5 company-info px-3">
       <div class="row text-white justify-content-center mt-3 pb-3">
         <div class="col-12 col-sm-6 col-lg-6 mb-4 mb-sm-4 mb-md-0">
           <h5 class="text-capitalize fw-bold">Unicorn Agency</h5>
@@ -918,11 +925,11 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- START THE COPYRIGHT INFO -->
 
-    <div class="footer-bottom py-5">
+    <!-- <div class="footer-bottom py-5">
       <div class="container">
         <div class="row text-center text-white">
           <div class="col-12">
@@ -933,7 +940,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </footer>
 
   <!-- BACK TO TOP BUTTON -->
