--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon-cross"></span> 
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav mb-sm-4 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="desarrollo-web.html">Desarrollo Web</a>
+            <a class="nav-link active" aria-current="page" href="paginas/desarrolloweb.html">Desarrollo Web</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="paginas/marketing-digital.html ">Marketing Digital</a>
+            <a class="nav-link" href="paginas/marketingdigital.html ">Marketing Digital</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#services">Servicios</a>
+            <a class="nav-link" href="paginas/servicios.html">Servicios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="paginas/agencia.html">Agencia</a>
@@ -49,14 +50,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="paginas/blog.html">Blog</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
-          </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#contact">Contacto</a>
-          </li> -->
+    
         </ul>
-        <button type="button" class="custom-button">Tengo un proyecto</button>
+        <button type="button" class="custom-button mt-4">Tengo un proyecto</button>
       </div>
     </div>
   </nav>
@@ -1037,7 +1033,7 @@
             </svg></div>
           <div class="contact-box__info">
             <a href="" class="contact-box__info--title">xxx xx xx xx</a>
-            <p class="contact-box__info--subtitle">Mon-Fri 9am-6pm</p>
+            <p class="contact-box__info--subtitle">Contáctanos</p>
           </div>
         </div>
 
@@ -1056,7 +1052,7 @@
           </div>
           <div class="contact-box__info">
             <a href="" class="contact-box__info--title">info@kweb.com</a>
-            <p class="contact-box__info--subtitle">Online Support</p>
+            <p class="contact-box__info--subtitle">¿Tienes dudas?</p>
           </div>
         </div>
 
@@ -1076,7 +1072,7 @@
           </div>
           <div class="contact-box__info">
             <a href="" class="contact-box__info--title">Madrid, España</a>
-            <p class="contact-box__info--subtitle">NY 10012, US</p>
+            <p class="contact-box__info--subtitle">¿Dónde estamos?</p>
           </div>
         </div>
       </div>
