--- a/paginas/marketingdigital.html
+++ b/paginas/marketingdigital.html
@@ -110,8 +110,8 @@
     <section id="blog" class="blog">
         <div class="container">
             <div class="row text-center">
-                <h1 class="display-3 fw-bold">Agencia</h1>
-                <p class="lead">AGENCIA</p>
+                <h1 class="display-3 fw-bold">Marketing Digital</h1>
+                <p class="lead">MARKETING DIGITAL</p>
             </div>
 
             <div class="row">
