--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -110,8 +110,8 @@
     <section id="blog" class="blog">
         <div class="container">
             <div class="row text-center">
-                <h1 class="display-3 fw-bold">Agencia</h1>
-                <p class="lead">AGENCIA</p>
+                <h1 class="display-3 fw-bold">Servicios</h1>
+                <p class="lead">SERVICIOS</p>
             </div>
 
             <div class="row">
